<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- layout buddha -->
    <string name="app_name">解脱之路</string>
    <string name="action_settings">Settings</string>
    <string name="btone">振动</string>
    <string name="EveryDayWords">每日一禅：</string>
    <string name="EDW_Url">http://stagingworkspace.com/darrenpage/data/everyday.php</string>
    <!-- subject -->
    <string name="subject">妙缘</string>
    <!-- layout buddha end -->
    
    <string name="serverurl">http://stagingworkspace.com/darrenpage/xml.html</string>
    <string name="loginurl">http://stagingworkspace.com/darrenpage/data/login.php</string>
	
    <!-- menu begin -->
    <string name="buddha">诸佛菩萨</string>
    <string name="music">佛教音乐</string>
    <string name="books">佛教经典</string>
    <string name="story">佛教故事</string>
    <string name="master">祖师大德</string>
    <string name="setting">系统设置</string>
    <string name="logout">注销</string>
    <string name="quit">退出</string>
    <string name="menuLogin">登陆</string>
    
    <!-- <string name=""></string> -->
    <!-- menu end -->
    
    <!-- Login -->
    <string name="login_title">用户登陆</string>
    <string name="username">用户：</string>
    <string name="password">密码：</string>
    <string name="keeplog">保持登陆</string>
    <string name="loginbt">登陆</string>
    <string name="registerbt">注册</string>
    <string name="namenull">用户不能为空！</string>
    <string name="passwordnull">密码不能为空！</string>
    <string name="logerror">用户或密码错误！</string>
    
    <!-- profile -->
    <string name="profile_title">个性管理</string>
    <string name="nickname_title">法名</string>
    <string name="sex_title">性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="brithday_title">生日</string>
    <string name="changps_title">修改密码</string>
    <string name="oldps_title">原密码</string>
    <string name="newps_title">新密码</string>
    <string name="renewps_title">校验码</string>
    <string name="changebt">修改</string>
    <string name="rtbuddha">返回</string>
    <string name="tab_userinfo">我的资料</string>
    <string name="tab_lession">我的课程</string>
    <string name="tab_friends">我的师兄</string>
    <!-- profile error -->
    <string name="error_nickname">师兄，请输入法名</string>
    <string name="error_oldpsnull">请输入愿密码</string>
    <string name="error_oldpsfailed">愿密码错误</string>
    <string name="error_newpsnull">请输入新密码</string>
    <string name="error_renewps">两次密码不一致</string>
</resources>